--- a/templates/results.html
+++ b/templates/results.html
@@ -171,15 +171,15 @@
                         <div class="row">
                             <div class="col-md-8">
                                 <strong class="text-break">
-                                    {{ error.file.split('/')[-1] if error.file else 'General' }}
+                                    {{ get_filename_from_path(error.file) }}
                                 </strong>
                                 <br>
                                 <small class="text-muted">
                                     <i class="fas fa-folder-open me-1"></i>
-                                    ...{{ error.file.split('/')[-3:] | join('/') if error.file and '/' in error.file else error.file }}
+                                    {{ shorten_path(error.file, 3) }}
                                 </small>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 text-end">
                                 <span class="badge bg-danger">{{ error.level }}</span>
                             </div>
                         </div>
@@ -197,7 +197,9 @@
                     <div class="mt-2">
                         <small class="text-muted">
                             <i class="fas fa-question-circle me-1"></i>
-                            For help with this issue, search for "{{ error_code }}" in the documentation.
+                            <a href="{{ get_error_documentation_url(error_code) }}" target="_blank" class="text-decoration-none">
+                                Learn more about this error <i class="fas fa-external-link-alt ms-1"></i>
+                            </a>
                         </small>
                     </div>
                 </div>
