--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,9 @@
                 <a class="nav-link text-muted" href="{{ url_for('index') }}">
                     <i class="fas fa-home me-1"></i>Home
                 </a>
+                <a class="nav-link text-muted" href="{{ url_for('json_editor.editor_index') }}">
+                    <i class="fas fa-pen-fancy me-1"></i>JSON Editor
+                </a>
             </div>
         </div>
     </nav>
